Make functional Lesson Page #1

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,23 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  
+    <style>
+      ::-webkit-scrollbar {
+        width: 8px;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #fff;
+        border: 2px solid #1976D2;
+        border-radius: 4px;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #2196F3;
+      }
+      ::-webkit-scrollbar-track {
+        background: #1976D2;
+      }
+    </style>
   </head>
   <body>
     <noscript>
