--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Learn English with VOA</title>
     <link
       href="https://fonts.googleapis.com/css?family=Fira+Sans:700|RocknRoll+One&display=swap"
       rel="stylesheet"
